Fixed interactive window limits.

--- a/notebook_exercises.ipynb
+++ b/notebook_exercises.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/aleksi/Documents/Hands-on scientific computing/Jupyter\n",
+      "/home/aleksi/Documents/Hands-on scientific computing/Jupyter/handsonscicomp\n",
       "¡Hola mundo!\n"
      ]
     }
@@ -127,12 +127,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c00f044a7204d68b547c89750c42d58",
+       "model_id": "78773e9524634731a8efa4beaff1a1eb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=8, description='n', max=24, min=-8), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=7, description='n', max=10, min=5), Output()), _dom_classes=('widget-int…"
       ]
      },
      "metadata": {},
@@ -158,7 +158,7 @@
     "fd.plot(5)\n",
     "\n",
     "# Exercise 3.2. here:\n",
-    "@interact(n=8)\n",
+    "@interact()\n",
     "def slider(n=(5, 10)):\n",
     "    fd.plot(n)"
    ]
